--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
     "DET_TRESH": 0.3,
     "DIST_TRESH": 0.2,
     "DB_NAME": "storage.db",
-    "HF_TOKEN": "",
-    "TS_APPID": "",
-    "TS_APPKEY": "",
+    "HF_TOKEN": "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",
+    "TS_APPID": "20231109001875299",
+    "TS_APPKEY": "er1guy8fmT3uNLtrxAK0",
     "HUMAN_TRANS": 0,
     "SPEAKER_NUM": 1,
     "TTS_MODEL":"tts_models/multilingual/multi-dataset/xtts_v2"
